Added round settings configuration

--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -5,8 +5,19 @@
 {% end %}
 {% block content %}
 <div id="tournament">
-	<li><a href="#players">Players</a></li>
+	<ul>
+		<li><a href="#players">Players</a></li>
+		<li><a href="#standings">Standings</a></li>
+		<li><a href="#settings">Settings</a></li>
+		<li><a href="#seating">Seating</a></li>
+	</ul>
 	<div id="players">
+	</div>
+	<div id="standings">
+	</div>
+	<div id="settings">
+	</div>
+	<div id="seating">
 	</div>
 </div>
 {% end %}
