Add user account management and preference updates
This commit adds in the same user account management as in MahjongSite.
When starting with no user accounts, it will prompt to create one and make
it an admin.  It allows users to update their preferences, using "preferences"
to distinguish it from the tournament "settings".  The preference management
code was moved to its own file, preferences.py.

A setting in mysettings.py called TOURNAMENTNAME is used for the name
of the tournament in email communications.

--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -5,6 +5,10 @@
 {% end %}
 {% block content %}
 <div id="tournament">
+	{% if no_user %}
+		<p>It appears you've no users. Would you like to create one?</p>
+		<a class="button" href="/setup">SETUP</a>
+	{% end %}
 	<ul>
 		<li><a href="#players">Players</a></li>
 		<li><a href="#settings">Settings</a></li>
