--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,9 @@
 {% extends "template.html" %}
 {% block content %}
+	{% if no_user %}
+		<p>It appears you've no users. Would you like to create one?</p>
+		<a class="button" href="/setup">SETUP</a>
+	{% end %}
 	{% if current_user %}
 		<a href="/newtournament">New Tournament</a>
 		{% for tournament in tournaments %}
