--- a/templates/template.html
+++ b/templates/template.html
@@ -26,7 +26,7 @@
 			{% if not current_user %}
 				<a href="/login?next={{ request.uri }}">Login</a>
 			{% else %}
-				<a href="/settings">Settings</a>
+				<a href="/preferences">Preferences</a>
 				<a href="/invite">Invite</a>
 				<a href="/logout?next={{ request.uri }}">Logout</a>
 			{% end %}
