--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,6 @@
 	box-sizing:border-box;
 	margin:0;
 	padding:0;
-	border:0;
 	outline:0;
 }
 html, body {
@@ -46,8 +45,7 @@ a {
 	cursor:pointer;
 }
 
-button, input, select, .clickable  {
-	border:none;
+button, input:not([type="checkbox"]), select, .clickable  {
 	width:100%;
 	height:2em;
 	margin-bottom:0.5em;
