Changed user editing and added method to inactive players
This commit adds an Inactive flag to the Players table. Only
authenticated users are presented controls for updaing player
info.  Updates to user settings are checked for validity before
commiting them.  If they aren't valid, the field changes class
and is highlighted.  Highlight disappears if the value is
corrected to something valid (and it is commited).

At the end of the player list, an Add Player button allows the creation of
a new player record. New players are created as inactive and must
be activated.

Still to do:
* Give new player a name that always sorts to the end of the list
* Make colors reasonable for default and other preferences
* Make field widths more reasonable
* Enable the "Make inactive", "Reactivate" button

--- a/templates/template.html
+++ b/templates/template.html
@@ -13,6 +13,12 @@
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.theme.min.css" rel="stylesheet" type="text/css" />
 		<link href="{{ static_url("css/style.css") }}" type="text/css" rel="stylesheet" />
 
+		{% if current_user and stylesheet %}
+			<link href="{{ static_url("css/colors/" + stylesheet) }}" type="text/css" rel="stylesheet" />
+		{% else %}
+			<link href="{{ static_url("css/colors/00-default.css") }}" type="text/css" rel="stylesheet" />
+		{% end %}
+
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js" type="text/javascript"></script>
