Don't move players between pools or softcut to resolve duplicates or diversity and added delete player button and fixed flag on select change

--- a/static/css/colors/00-default.css
+++ b/static/css/colors/00-default.css
@@ -47,10 +47,10 @@ table td {
 	background: #666;
 	color: #eee;
 }
-.ui-widget-header, .ui-icon {
+.ui-icon {
 	background-image: url(https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/images/ui-icons_ffffff_256x240.png);
 }
-.ui-widget-header, .ui-state-hover, .ui-icon {
+.ui-state-hover, .ui-icon {
 	background-image: url(https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/images/ui-icons_222222_256x240.png);
 }
 .ui-menu, .ui-menu-item, .ui-state-focus {
