Add User managment for admin users
This commit sets up a new tab to manage user accounts.  It can be used
to edit the email address (account name) of the account and set whether
it has admin privilege or not.  It has buttons for adding and deleting
accounts that are non-functioning.

Made some appearance tweaks to see users more clearly, but this still
needs improvement.

--- a/static/css/colors/00-default.css
+++ b/static/css/colors/00-default.css
@@ -35,11 +35,11 @@ table td {
 }
 
 .ui-widget-content, .ui-state-default, #tournament li {
-	background: #444;
+	background: #111;
 	color: #eee;
 	border: 1px solid #555;
 }
-.ui-widget-content, .ui-state-hover, .ui-widget-content .ui-state-active {
+.ui-widget-content, .ui-state-hover, .ui-widget-content, .ui-state-active {
 	background: #eee;
 	color: #444;
 }
