--- a/templates/tables.html
+++ b/templates/tables.html
@@ -7,7 +7,9 @@
 	</ul>
 	{% for round in rounds %}
 		<div class="round" data-round="{{ round['round'] }}" id="round-{{ round['round'] }}">
+		{% if is_admin %}
 			<button class="genround">Generate</button>
+		{% end %}
 			<table class="tables">
 				<tr>
 					{% if round['winds'] %}
