Enable user feedback on score editing in seating panel
As authenticated users enter scores in the seating panel, the score
entry boxes and the total score are highlighted as "bad" if they
do not total 100,000 or 0.  Once they total 100,000, the rank and
final scores are computed and displayed.

--- a/templates/tables.html
+++ b/templates/tables.html
@@ -29,7 +29,7 @@
 							<th colspan="4" class="tabletotal">TOTAL {{ table['total'] }}</th>
 						</tr>
 					</thead>
-					<tbody class="table" data-tableid="{{ table['table'] }}" >
+					<tbody class="table" data-tableid="{{ table['table'] }}" data-roundid="{{ round['round'] }}">
 						{% for player in table['players'] %}
 							<tr class="player" data-playerid="{{ player['player']['id'] }}">
 								{% if round['winds'] %}
