Changed 'Inactive' field to 'Type' in Players table and made it editable
Players now can be either regular, inactive, or substitute
players depending the on the integer in the 'Type' field.  In the
player displays, regular players have an empty status or type
string, while the other categories show as "Inactive"
or "Substitute".  The "Show All" checkbox now shows/hides all
non-regular players.  Admins can edit the type of each player.

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -8,14 +8,14 @@
 		<th>STATUS</th>
 	</tr>
 	{% for row in leaderboard %}
-		<tr class="leaderbd_row" data-status="{{ row['inactive'] }}">
+		<tr class="leaderbd_row" data-status="{{ row['type'] }}">
 			<td>{{ row['place'] }}</td>
 			<td><a href="/playerstats/{{ row['name'] }}">{{ row['name'] }}</a></td>
 			<td>{{ row['country'] }}</td>
 			<td>{% raw row['flag_image'] %}</td>
 			<td>{{ row['games_played'] }}</td>
 			<td>{{ row['score'] }}</td>
-			<td>{% if row['inactive'] %}Inactive{% end %}</td>
+			<td>{{ row['type'] }}</td>
 		</tr>
 	{% end %}
 </table>
