WRC link opens in new tab

--- a/templates/template.html
+++ b/templates/template.html
@@ -34,7 +34,7 @@
 		{% block head %}{% end %}
 	</head>
 	<body>
-	  <a href="https://worldriichi.org/">
+	  <a href="https://worldriichi.org/" target="_blank">
 	    <img src="{{ static_url("images/favicon.png") }}" class="sitelogo"
 		 alt="Logo"></a>
 	  <div id="navbar">
