--- a/templates/tournament.html
+++ b/templates/tournament.html
@@ -11,6 +11,7 @@
 	{% end %}
 	<ul>
 		<li><a href="/leaderboard.html">Standings</a></li>
+		<li><a href="/scoreboard">Scores</a></li>
 		<li><a href="/seating.html">Seating</a></li>
 		<li data-id="players"><a href="#players">Players</a></li>
 	  {% if is_admin %}
