--- a/templates/tables.html
+++ b/templates/tables.html
@@ -10,7 +10,9 @@
 		{% if is_admin and not round['has_scores'] %}
 			<button class="genround">Generate</button><br />
 		{% end %}
-			<button class="genscores">Randomize Scores</button><br />
+			{% if current_user %}
+				<button class="genscores">Randomize Scores</button><br />
+			{% end %}
 			<a href="/seating.csv?round={{ round['round'] }}">Download as CSV</a>
 			<div class="roundstatus">
 				Players sitting with players they've played before: {{ round['duplicates'] }}<br />
