--- a/static/css/tournament.css
+++ b/static/css/tournament.css
@@ -2,3 +2,14 @@
     height: 100%;
     border: 1px solid black;
 }
+
+#tournament > .ui-tabs-panel {
+	width:100%;
+	overflow-x: scroll;
+}
+
+@media (max-width:600px) {
+	.ui-tabs .ui-tabs-panel {
+		padding:0;
+	}
+}
