Added player stats history cookie

--- a/templates/playerstats.html
+++ b/templates/playerstats.html
@@ -18,11 +18,13 @@
     <div id="playerstats">
     </div>
     <br />
-    {% if is_admin %}
-      <form method="post" action="/playerstats/{{ name }}">
-	<input type="text" name="name" value="{{ name }}" />
-	<input type="submit" value="Update Names" />
-      </form>
-    {% end %}
+		{% if history and len(history) > 0 %}
+			<div id="statshistory">
+				<h2>Recently Viewed</h2>
+				{% for item in history %}
+					<a href="/playerstats/{{ item }}">{{ item }}</a><br />
+				{% end %}
+			</div>
+		{% end %}
   {% end %}
 {% end %}
