Removed unneccessary scrollbar and centered tab content

--- a/static/css/tournament.css
+++ b/static/css/tournament.css
@@ -5,7 +5,11 @@
 
 #tournament > .ui-tabs-panel {
 	width:100%;
-	overflow-x: scroll;
+	overflow-x: auto;
+}
+
+#tournament > .ui-tabs-panel > * {
+	margin: 0 auto;
 }
 
 @media (max-width:600px) {
