--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -5,6 +5,8 @@
 		<th colspan="2" >COUNTRY</th>
 		<th>GAMES</th>
 		<th>AVG SCORE</th>
+		<th>PENALTY</th>
+		<th>TOTAL</th>
 		<th>STATUS</th>
 	</tr>
 	{% for row in leaderboard %}
@@ -15,6 +17,8 @@
 			<td>{% raw row['flag_image'] %}</td>
 			<td>{{ row['games_played'] }}</td>
 			<td>{{ row['score'] }}</td>
+			<td>{{ row['penalty'] }}</td>
+			<td>{{ round(row['total'],1) }}</td>
 			<td>{{ row['type'] }}</td>
 		</tr>
 	{% end %}
